# zerocomfy

./: .gitignore  CLAUDE.md  Cargo.toml  README-subnet-config.md  README.md  subnet-config  subnet.conf  test-authorityd.toml
dev/archnotes/: ARCHITECTURE.md  README.md  RELATED.md  refactor-authorityd-2026-02-15.md
doc/: subnet-config-code-explainer.md
examples/: authorityd.toml
shared/: Cargo.toml
shared/src/: protocol.rs  types.rs
subnet-authorityd/: Cargo.toml
subnet-authorityd/src/: cache_manager.rs  config.rs  main.rs
subnet-authorityd/src/api/: routes.rs
subnet-authorityd/src/cache/: db.rs  hash.rs  mod.rs
subnet-authorityd/src/mdns/: advertise.rs  browser.rs  mod.rs
subnet-client/: Cargo.toml
subnet-client/src/: main.rs
systemd/: subnet-authorityd.service
